--- a/style.css
+++ b/style.css
@@ -1,24 +1,88 @@
 .header {
-    background-image: url(./img/hero4.png);
+    background: rgba(0, 0, 0, 0.2)url(./img/hero4.png);
     height: 100vh;
     width: 100%;
     background-size: cover;
     background-position: top 4% right 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 0 80px;
+    background-blend-mode: darken;
 }
 
-.header button {
-    background-image: url(./img/button.png);
-    border: 0;
+.product {
+    position: relative;
+    width: 23%;
+    border: 1px solid gray;
+    padding: 10px 12px;
+    min-width: 250px;
+    border-radius: 20px;
+    margin: 10px;
+}
+
+#banner {
+    height: 40vh;
+    background-image: url(./img/banner/b2.jpg);
     background-repeat: no-repeat;
-    background-color: transparent;
-    padding: 14px 80px 14px 65px;
-    color: #088178;
-    font-size: 15px;
-    font-weight: 700;
-    cursor: pointer;
+    background-position: center;
+    line-height: 40px;
+}
+
+.second-product-style {
+    width: 23%;
+    border: 1px solid gray;
+    padding: 10px 12px;
+    min-width: 250px;
+    border-radius: 20px;
+    margin: 10px;
+}
+
+#sm-banner .banner-box {
+    height: 50vh;
+    min-width: 580px;
+    background-image: url(./img/banner/b17.jpg);
+    background-position: center;
+    background-size: cover;
+    line-height: 40px;
+    padding: 30px;
+}
+
+#sm-banner .banner-box:nth-child(2) {
+    height: 50vh;
+    min-width: 580px;
+    background-image: url(./img/banner/b10.jpg);
+    background-position: center;
+    background-size: cover;
+    line-height: 40px;
+    padding: 30px;
+}
+
+#banner3 .banner-box {
+    height: 30vh;
+    min-width: 30%;
+    background-image: url(./img/banner/b7.jpg);
+    background-position: center;
+    background-size: cover;
+    line-height: 30px;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+#banner3 .banner-box:nth-child(2) {
+    height: 30vh;
+    min-width: 30%;
+    background-image: url(./img/banner/b4.jpg);
+    background-position: center;
+    background-size: cover;
+    line-height: 30px;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+#banner3 .banner-box:nth-child(3) {
+    height: 30vh;
+    min-width: 30%;
+    background-image: url(./img/banner/b16.jpg);
+    background-position: center;
+    background-size: cover;
+    line-height: 30px;
+    padding: 20px;
+    margin-bottom: 20px;
 }
