--- a/style.css
+++ b/style.css
@@ -9,10 +9,11 @@
 
 .product {
     position: relative;
-    width: 23%;
+    width: 25%;
     border: 1px solid gray;
     padding: 10px 12px;
-    min-width: 250px;
+    min-width: 286px;
+    height: 510px;
     border-radius: 20px;
     margin: 10px;
 }
@@ -29,7 +30,8 @@
     width: 23%;
     border: 1px solid gray;
     padding: 10px 12px;
-    min-width: 250px;
+    min-width: 286px;
+    height: 510px;
     border-radius: 20px;
     margin: 10px;
 }
